# EmscriptenOpengl

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Graphics.data  Graphics.html  Graphics.js  Graphics.wasm  README.md  index.html  vcpkg.json
.devcontainers/: Dockerfile  cmake-kits.json  devcontainer.json
.github/workflows/: web.yml
assets/scenes/: basic.json  entity_scene.json  gooch.json  normals.json  phong.json  texture.json  wireframe.json
assets/shaders/: basic.frag.glsl  basic.vert.glsl  bloom.frag.glsl  gooch.frag.glsl  gooch.vert.glsl  normals.frag.glsl  normals.vert.glsl  phong.frag.glsl  phong.vert.glsl  post_process_mix.frag.glsl  screen.vert.glsl  screen_basic.frag.glsl  screen_depth.frag.glsl  texture.frag.glsl  texture.vert.glsl  white.frag.glsl  wireframe.frag.glsl  wireframe.geo.glsl  wireframe.vert.glsl
include/: Application.hpp  BuildSettings.hpp  Components.hpp  Concept.hpp  Ecs.hpp  Expected.hpp  Libraries.hpp  Loader.hpp
include/renderer/: Renderer.hpp
include/renderer/3d/: Camera.hpp  Light.hpp  Material.hpp  Mesh.hpp  MeshRenderer.hpp  Scene.hpp
include/renderer/core/: FrameBuffer.hpp  IndexBuffer.hpp  Input.hpp  OpenglContext.hpp  Shader.hpp  Texture.hpp  VertexArray.hpp  VertexBuffer.hpp  VertexBufferLayout.hpp
include/wm/: Functors.hpp  Sov.hpp  Splitters.hpp
src/: Application.cpp  Main.cpp
src/renderer/3d/: Mesh.cpp  MeshRenderer.cpp
src/renderer/core/: IndexBuffer.cpp  OpenglContext.cpp  Shader.cpp  Texture.cpp  VertexArray.cpp  VertexBuffer.cpp
web-release/: Graphics.js  Graphics.wasm
